Refactored classes, added new architecture scheme. Made resultchecker and winningnumbergenerator communicate with NumberReceiverFacade to get next draw date. Because of that logic has changed to make them provide data after date of draw. Also implemented method to check winners who only hit 4 and more numbers. Added new class to test time dependant actions in the app.