@@ -1,34 +1,41 @@
 package pl.lotto.winningnumbergenerator;
 
+import pl.lotto.numberreceiver.NumberReceiverFacade;
+import pl.lotto.numberreceiver.dto.NumberReceiverResultDto;
 import pl.lotto.winningnumbergenerator.generator.Randomable;
 import pl.lotto.winningnumbergenerator.repository.WinningNumbersService;
-import pl.lotto.winningnumbergenerator.timer.TimeSettable;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 public class WiningNumbersGeneratorFacade {
 
     WinningNumbersService winningNumbersService;
-    TimeSettable timer;
     Randomable generator;
+    NumberReceiverFacade numberReceiverFacade;
 
-    public WiningNumbersGeneratorFacade(WinningNumbersService numbersService, TimeSettable timer, Randomable generator) {
+    public WiningNumbersGeneratorFacade(WinningNumbersService numbersService, Randomable generator, NumberReceiverFacade numberReceiverFacade) {
         this.winningNumbersService = numbersService;
-        this.timer = timer;
+        this.numberReceiverFacade = numberReceiverFacade;
         this.generator = generator;
     }
 
-    public List<Integer> retrieveWonNumbersForDate(LocalDateTime dateTime) {
-        if(!winningNumbersService.containsWinningNumbers(dateTime)&&timer.ItsTimeToMakeADraw(dateTime)){
-            generator.generateNumbersToRepository(dateTime);
+    public NumberReceiverResultDto retrieveWonNumbersForDate(LocalDateTime dateTime) {
+        winningNumbersService.saveNextDrawDate(numberReceiverFacade.outputDrawTime());
+        if (!winningNumbersService.containsWinningNumbers(dateTime) && winningNumbersService.isValidDrawDate(dateTime)) {
+            NumberReceiverResultDto resultDto = generator.generateNumbers(dateTime);
+            winningNumbersService.saveWinningNumbers(dateTime, resultDto.userNumbers());
             return winningNumbersService.provideWinningNumbers(dateTime);
         }
-        if (winningNumbersService.containsWinningNumbers(dateTime)&&timer.currentTime().isAfter(dateTime)) {
+        if (winningNumbersService.containsWinningNumbers(dateTime)) {
             return winningNumbersService.provideWinningNumbers(dateTime);
         }
-        return Arrays.asList();
+        return fetchErrorDto(dateTime);
+    }
+
+    private NumberReceiverResultDto fetchErrorDto(LocalDateTime dateTime) {
+        return new NumberReceiverResultDto("Invalid input provided, numbers not generated", Optional.empty(), List.of(), Optional.of(dateTime));
     }
 
 }
